Improved code comments and cleand up code

--- a/Ch14/tfx/14.1_MLOps_with_tensorflow.ipynb
+++ b/Ch14/tfx/14.1_MLOps_with_tensorflow.ipynb
@@ -82,7 +82,18 @@
     "\n",
     "# Fixing the random seed\n",
     "random_seed=4321\n",
-    "fix_random_seed(random_seed)"
+    "fix_random_seed(random_seed)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the pipeline folder if it already exists\n",
+    "if os.path.exists('pipeline'):\n",
+    "    shutil.rmtree('pipeline')"
    ]
   },
   {
@@ -788,6 +799,7 @@
     "from tfx.proto import example_gen_pb2\n",
     "\n",
     "# You can change the configuration of generating train-eval split by passing a SplitConfig as below\n",
+    "# Note that we have not used it in the CsvExampleGen\n",
     "output = example_gen_pb2.Output(\n",
     "    split_config=example_gen_pb2.SplitConfig(splits=[\n",
     "        example_gen_pb2.SplitConfig.Split(name='train', hash_buckets=3),\n",
@@ -798,15 +810,6 @@
     "example_gen = CsvExampleGen(input_base=os.path.join('data', 'csv', 'train'))\n",
     "# Run the example generator\n",
     "context.run(example_gen)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Difference channel and a pb2 (that's a protobuf)\n",
-    "\n",
-    "https://www.tensorflow.org/tfx/api_docs/python/tfx/types/Channel (explain channels)"
    ]
   },
   {
@@ -2645,7 +2648,7 @@
    "source": [
     "## Display the inferred schema\n",
     "\n",
-    "TFX uses the `tensorflow_data_validation` library to do that. To do this manually, do the following.\n",
+    "Schema can be displayed as dataframes. TFX uses the `tensorflow_data_validation` library to do that. To do this manually, do the following.\n",
     "\n",
     "```\n",
     "schema = tfdv.load_schema_text(\n",
@@ -6028,16 +6031,6 @@
     "                  name='examples'\n",
     "              )\n",
     "          ),\n",
-    "      tf.compat.v1.saved_model.signature_constants.REGRESS_METHOD_NAME:\n",
-    "          _get_serve_tf_examples_fn(\n",
-    "              model, tf_transform_output\n",
-    "          ).get_concrete_function(\n",
-    "              tf.TensorSpec(\n",
-    "                  shape=[None],\n",
-    "                  dtype=tf.string,\n",
-    "                  name='examples'\n",
-    "              )\n",
-    "          ),\n",
     "  }\n",
     "  model.save(fn_args.serving_model_dir, save_format='tf', signatures=signatures)\n"
    ]
@@ -6527,13 +6520,7 @@
       "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/eager/function.py\", line 505, in add_to_graph\n",
       "    g._add_function(self)\n",
       "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/framework/ops.py\", line 3396, in _add_function\n",
-      "    gradient)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "    gradient)\n",
       "tensorflow.python.framework.errors_impl.InvalidArgumentError: 'func' argument to TF_GraphCopyFunction cannot be null\n",
       "Exception ignored in: <bound method CapturableResourceDeleter.__del__ of <tensorflow.python.training.tracking.tracking.CapturableResourceDeleter object at 0x7efd940856a0>>\n",
       "Traceback (most recent call last):\n",
@@ -8908,7 +8895,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overwrite the schema"
+    "### Overwrite the schema"
    ]
   },
   {
@@ -8924,7 +8911,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Checking examples"
+    "## Validating examples using the ExampleValidator"
    ]
   },
   {
@@ -10119,7 +10106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Transform data (after removing anomalies)"
+    "## Rerun the steps after removing anomalies"
    ]
   },
   {
@@ -12214,6 +12201,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Show statistics for the new data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -12299,6 +12293,13 @@
    ],
    "source": [
     "context.show(statistics_gen.outputs['statistics'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Show example validation results for the new data"
    ]
   },
   {
@@ -12658,13 +12659,7 @@
       "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/eager/function.py\", line 505, in add_to_graph\n",
       "    g._add_function(self)\n",
       "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/framework/ops.py\", line 3396, in _add_function\n",
-      "    gradient)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "    gradient)\n",
       "tensorflow.python.framework.errors_impl.InvalidArgumentError: 'func' argument to TF_GraphCopyFunction cannot be null\n",
       "Exception ignored in: <bound method CapturableResourceDeleter.__del__ of <tensorflow.python.training.tracking.tracking.CapturableResourceDeleter object at 0x7efe7e26d7f0>>\n",
       "Traceback (most recent call last):\n",
@@ -15999,13 +15994,7 @@
       "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/eager/function.py\", line 505, in add_to_graph\n",
       "    g._add_function(self)\n",
       "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/framework/ops.py\", line 3396, in _add_function\n",
-      "    gradient)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "    gradient)\n",
       "tensorflow.python.framework.errors_impl.InvalidArgumentError: 'func' argument to TF_GraphCopyFunction cannot be null\n",
       "Exception ignored in: <bound method CapturableResourceDeleter.__del__ of <tensorflow.python.training.tracking.tracking.CapturableResourceDeleter object at 0x7efe381dc240>>\n",
       "Traceback (most recent call last):\n",
@@ -16546,13 +16535,7 @@
       "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/eager/function.py\", line 505, in add_to_graph\n",
       "    g._add_function(self)\n",
       "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/framework/ops.py\", line 3396, in _add_function\n",
-      "    gradient)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "    gradient)\n",
       "tensorflow.python.framework.errors_impl.InvalidArgumentError: 'func' argument to TF_GraphCopyFunction cannot be null\n",
       "Exception ignored in: <bound method CapturableResourceDeleter.__del__ of <tensorflow.python.training.tracking.tracking.CapturableResourceDeleter object at 0x7efe37ec5eb8>>\n",
       "Traceback (most recent call last):\n",
@@ -19169,13 +19152,7 @@
       "tensorflow.python.framework.errors_impl.InvalidArgumentError: 'func' argument to TF_GraphCopyFunction cannot be null\n",
       "Exception ignored in: <bound method CapturableResourceDeleter.__del__ of <tensorflow.python.training.tracking.tracking.CapturableResourceDeleter object at 0x7efd28507d68>>\n",
       "Traceback (most recent call last):\n",
-      "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/training/tracking/tracking.py\", line 208, in __del__\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/training/tracking/tracking.py\", line 208, in __del__\n",
       "    self._destroy_resource()\n",
       "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/eager/def_function.py\", line 828, in __call__\n",
       "    result = self._call(*args, **kwds)\n",
@@ -19343,13 +19320,7 @@
       "    graph_function = self._create_graph_function(args, kwargs)\n",
       "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/eager/function.py\", line 3206, in _create_graph_function\n",
       "    capture_by_value=self._capture_by_value),\n",
-      "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/framework/func_graph.py\", line 990, in func_graph_from_py_func\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/framework/func_graph.py\", line 990, in func_graph_from_py_func\n",
       "    func_outputs = python_func(*func_args, **func_kwargs)\n",
       "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/eager/def_function.py\", line 634, in wrapped_fn\n",
       "    out = weak_wrapped_fn().__wrapped__(*args, **kwds)\n",
@@ -19778,13 +19749,7 @@
       "    graph_function, _ = self._maybe_define_function(args, kwargs)\n",
       "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/eager/function.py\", line 3361, in _maybe_define_function\n",
       "    graph_function = self._create_graph_function(args, kwargs)\n",
-      "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/eager/function.py\", line 3206, in _create_graph_function\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/eager/function.py\", line 3206, in _create_graph_function\n",
       "    capture_by_value=self._capture_by_value),\n",
       "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/framework/func_graph.py\", line 990, in func_graph_from_py_func\n",
       "    func_outputs = python_func(*func_args, **func_kwargs)\n",
@@ -20346,13 +20311,7 @@
       "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/eager/function.py\", line 505, in add_to_graph\n",
       "    g._add_function(self)\n",
       "  File \"/home/thushv89/anaconda3/envs/manning.tf2.tfx/lib/python3.6/site-packages/tensorflow/python/framework/ops.py\", line 3396, in _add_function\n",
-      "    gradient)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "    gradient)\n",
       "tensorflow.python.framework.errors_impl.InvalidArgumentError: 'func' argument to TF_GraphCopyFunction cannot be null\n",
       "Exception ignored in: <bound method CapturableResourceDeleter.__del__ of <tensorflow.python.training.tracking.tracking.CapturableResourceDeleter object at 0x7efe357ae6a0>>\n",
       "Traceback (most recent call last):\n",
